--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-    <header class="pege-header">
+    <header class="page-header">
         <nav class="container main-nav">
             <a class="logo-link" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
             <ul class="site-nav list">
@@ -106,7 +106,7 @@
     </main>
     <footer class="contact-list">
     <div class="container">
-        <a href="./index.html" class="logo-link">Web<span class="logo-studio">Studio</span></a>
+        <a href="./index.html" class="logof-link">Web<span class="logo-studio">Studio</span></a>
     <address class="keys">
         <ul class="contact-foot list">
             <li class="item"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="map-link" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
