--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-    <header class="pege-header">
+    <header class="page-header">
         <nav class="container main-nav">
             <a href="./index.html" class="logo-link">Web<span class="logo-header">Studio</span></a>
             <ul class="site-nav list">
@@ -47,10 +47,6 @@
                     <button type="button" class="link">Маркетинг</button>
                 </li>
             </ul>
-        </div>
-        </section>
-        <section>
-            <div class="container">
             <ul class="project-list">
                 <li class="item">
                     <img src="images/imgportfolio.jpg" alt="Фото приклад Веб-сайту Технокряк" width="370" height="294">
@@ -98,7 +94,8 @@
                     <p class="works-text">Додаток</p>
                 </li>
             </ul>
-        </div> 
+
+        </div>
         </section>
     </main>
     <footer class="contact-list">
