Виправляє всі помилки

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <h2 class="work-list">Чим ми займаємося</h2>
             <ul class="our-list">
               <li class="item">
-                <img src="images/img.jpg" alt="Фото верстки" width="370">
+                <img class="blocks" src="images/img.jpg" alt="Фото верстки" width="370">
               </li>
              <li class="item">
-              <img src="images/img1.jpg" alt ="Розробка дизайна для телефона" width="370">
+              <img class="blocks" src="images/img1.jpg" alt ="Розробка дизайна для телефона" width="370">
              </li>
              <li class="item">
-              <img src="images/img2.jpg" alt="Вибір відтінку кольору на планшеті" width="370">
+              <img class="blocks" src="images/img2.jpg" alt="Вибір відтінку кольору на планшеті" width="370">
              </li>
             </ul>
             </div>
