--- a/portfolio.html
+++ b/portfolio.html
@@ -27,74 +27,111 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="port">
             <div class="container site-works">
             <h1 class="visually-hidden">Приклади робіт</h1>
             <ul class="site-works list">
                 <li class="item">
-                    <button type="button" class="link">Усі</button>
+                    <button type="button" class="links">Усі</button>
                 </li>
                 <li class="item">
-                    <button type="button" class="link">Веб-сайти</button>
+                    <button type="button" class="links">Веб-сайти</button>
                 </li>
                 <li class="item">
-                    <button type="button" class="link">Планування</button>
+                    <button type="button" class="links">Додатки</button>
                 </li>
                 <li class="item">
-                    <button type="button" class="link">Дизайн</button>
+                    <button type="button" class="links">Дизайн</button>
                 </li>
                 <li class="item">
-                    <button type="button" class="link">Маркетинг</button>
+                    <button type="button" class="links">Маркетинг</button>
                 </li>
+                
             </ul>
             <ul class="project-list">
                 <li class="item">
-                    <img src="images/imgportfolio.jpg" alt="Фото приклад Веб-сайту Технокряк" width="370" height="294">
-                    <h2 class="works-title">Технокряк</h2>
-                    <p class="works-text">Веб-сайт</p>
+                    <a class="hor" href=""> 
+                    <img class="card-image" src="images/imgportfolio.jpg" alt="Фото приклад Веб-сайту Технокряк" width="370"/>
+                    <div class="card-content">
+                        <h2 class="works-title">Технокряк</h2>
+                        <p class="works-text">Веб-сайт</p>
+                    </div>
+                </a>
                 </li>
                 <li class="item">
-                    <img src="images/img1portfolio.jpg" alt="Фото приклад дизайну Постер New Orlean vs Golden Star" width="370" height="294">
-                    <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="works-text">Дизайн</p>
+                    <a class="hor" href="">
+                    <img class="card-image" src="images/img1portfolio.jpg" alt="Фото приклад дизайну Постер New Orlean vs Golden Star" width="370"/>
+                    <div class="card-content">
+                        <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
+                        <p class="works-text">Дизайн</p>
+                    </div> 
+                    </a>    
                 </li>
                 <li class="item">
-                    <img src="images/img2portfolio.jpg" alt="Фото приклад додатку Ресторан Seafood" width="370" height="294">
-                    <h2 class="works-title">Ресторан Seafood</h2>
-                    <p class="works-text">Додаток</p>
+                    <a class="hor" href="">
+                    <img class="card-image" src="images/img2portfolio.jpg" alt="Фото приклад додатку Ресторан Seafood" width="370"/>
+                    <div class="card-content">
+                        <h2 class="works-title">Ресторан Seafood</h2>
+                        <p class="works-text">Додаток</p>
+                    </div>
+                    </a>
+                </a> 
                 </li>
                 <li class="item">
-                    <img src="images/img3portfolio.jpg" alt="Фото приклад проєкт Prime" width="370" height="294">
-                    <h2 class="works-title">Проєкт Prime</h2>
-                    <p class="works-text">Маркетинг</p>
+                    <a class="hor" href="">
+                    <img class="card-image" src="images/img3portfolio.jpg" alt="Фото приклад проєкт Prime" width="370"/>
+                    <div class="card-content">
+                        <h2 class="works-title">Проєкт Prime</h2>
+                        <p class="works-text">Маркетинг</p>
+                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <img src="images/img4portfolio.jpg" alt="Фото приклад додатку Проєкт Boxes" width="370" height="294">
-                    <h2 class="works-title">Проєкт Boxes</h2>
-                    <p class="works-text">Додаток</p>
+                    <a class="hor" href="">
+                    <img class="card-image" src="images/img4portfolio.jpg" alt="Фото приклад додатку Проєкт Boxes" width="370"/>
+                    <div class="card-content">
+                        <h2 class="works-title">Проєкт Boxes</h2>
+                        <p class="works-text">Додаток</p>
+                    </div> 
+                    </a>
                 </li>
                 <li class="item">
-                    <img src="images/img5portfolio.jpg" alt="Фото приклад Веб-сайт Inspiration has no Borders" width="370" height="294">
+                    <a class="hor" href="">
+                    <img class="card-image" src="images/img5portfolio.jpg" alt="Фото приклад Веб-сайт Inspiration has no Borders" width="370"/>
+                    <div class="card-content">
                     <h2 class="works-title">Inspiration has no Borders</h2>
                     <p class="works-text">Веб-сайт</p>
+                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <img src="images/img6portfolio.jpg" alt="Фото приклад дизайну Видання Limited Edition" width="370" height="294">
+                    <a class="hor" href="">
+                    <img class="card-image" src="images/img6portfolio.jpg" alt="Фото приклад дизайну Видання Limited Edition" width="370"/>
+                    <div class="card-content">
                     <h2 class="works-title">Видання Limited Edition</h2>
                     <p class="works-text">Дизайн</p>
+                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <img src="images/img7portfolio.jpg" alt="Фото приклад маркетингу Проєкт LAB" width="370" height="294">
+                    <a class="hor" href="">
+                    <img class="card-image" src="images/img7portfolio.jpg" alt="Фото приклад маркетингу Проєкт LAB" width="370"/>
+                    <div class="card-content">
                     <h2 class="works-title">Проєкт LAB</h2>
                     <p class="works-text">Маркетинг</p>
+                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <img src="images/img8portfolio.jpg" alt="Фото приклад додатку Growing Business" width="370" height="294">
+                    <a class="hor" href="">
+                    <img class="card-image" src="images/img8portfolio.jpg" alt="Фото приклад додатку Growing Business" width="370"/>
+                    <div class="card-content">
                     <h2 class="works-title">Growing Business</h2>
                     <p class="works-text">Додаток</p>
+                    </div>
+                    </a>
                 </li>
             </ul>
-
         </div>
         </section>
     </main>
