--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 </head>
 <body>
     <header class="page-header">
-        <nav class="container main-nav">
+        <div class="container">
+        <nav class="main-nav">
             <a class="logo-link" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
             <ul class="site-nav list">
                 <li class="item"><a href="./index.html" class="link current">Студія</a></li>
                 <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
                 <li class="item"><a href="#" class="link">Контакти</a></li>
-            </ul>      
+            </ul>
+        </nav>      
             <ul class="contact-nav list">
                 <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li class="item"><a href="tel:+380961111111" class="link">+380961111111</a></li>
             </ul>
-        </nav>
+        </div>
     </header>   
     <main>
         <section class="hero">
@@ -82,23 +84,31 @@
             <ul class="team-list">
                 <li class="work-platform">
                     <img src="images/img4.jpg" alt="Фото Ігор Дем'яненко " width="270" height="260">
+                    <div class="portal">
                     <h3 class="title">Ігор Дем'яненко</h3>
                     <p class="text">Product Designer</p>
+                    </div>
                 </li>
                 <li class="work-platform">
                     <img src="images/img5.jpg" alt="Фото Ольга Рєпіна" width="270" height="260">
+                    <div class="portal">
                     <h3 class="title">Ольга Рєпіна</h3>
                     <p class="text">Frontend Developer</p>
+                </div>
                 </li>
                 <li class="work-platform">
                     <img src="images/img6.jpg" alt="Фото Микола Тарасов" width="270" height="260">
+                    <div class="portal"> 
                     <h3 class="title">Микола Тарасов</h3>
                     <p class="text">Marketing</p>
+                    </div>
                 </li>
                 <li class="work-platform">
                     <img src="images/img7.jpg" alt="Фото Михайло Єрмаков" width="270" height="260">
+                    <div class="portal">
                     <h3 class="title">Михайло Єрмаков</h3>
                     <p class="text">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div>
