--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,20 @@
 </head>
 <body>
     <header class="page-header">
-        <nav class="container main-nav">
-            <a href="./index.html" class="logo-link">Web<span class="logo-header">Studio</span></a>
-            <ul class="site-nav list">
-                <li class="item"><a href="./index.html" class="link">Студія</a></li>
-                <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-                <li class="item"><a href="#" class="link">Контакти</a></li>
-            </ul>
+        <div class="container">
+            <nav class="main-nav">
+                <a class="logo-link" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link current">Студія</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                    <li class="item"><a href="#" class="link">Контакти</a></li>
+                </ul>
+            </nav>      
             <ul class="contact-nav list">
                 <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li class="item"><a href="tel:+380961111111" class="link">+380961111111</a></li>
             </ul>
-        </nav>
+        </div>
     </header>
     <main>
         <section class="port">
@@ -51,7 +53,7 @@
             <ul class="project-list">
                 <li class="item">
                     <a class="hor" href=""> 
-                    <img class="card-image" src="images/imgportfolio.jpg" alt="Фото приклад Веб-сайту Технокряк" width="370"/>
+                    <img class="card-image" src="images/imgportfolio.jpg" alt="Фото приклад Веб-сайту Технокряк" width="370" style="display:block"/>
                     <div class="card-content">
                         <h2 class="works-title">Технокряк</h2>
                         <p class="works-text">Веб-сайт</p>
@@ -60,7 +62,7 @@
                 </li>
                 <li class="item">
                     <a class="hor" href="">
-                    <img class="card-image" src="images/img1portfolio.jpg" alt="Фото приклад дизайну Постер New Orlean vs Golden Star" width="370"/>
+                    <img class="card-image" src="images/img1portfolio.jpg" alt="Фото приклад дизайну Постер New Orlean vs Golden Star" width="370" style="display:block"/>
                     <div class="card-content">
                         <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
                         <p class="works-text">Дизайн</p>
@@ -69,7 +71,7 @@
                 </li>
                 <li class="item">
                     <a class="hor" href="">
-                    <img class="card-image" src="images/img2portfolio.jpg" alt="Фото приклад додатку Ресторан Seafood" width="370"/>
+                    <img class="card-image" src="images/img2portfolio.jpg" alt="Фото приклад додатку Ресторан Seafood" width="370" style="display:block"/>
                     <div class="card-content">
                         <h2 class="works-title">Ресторан Seafood</h2>
                         <p class="works-text">Додаток</p>
@@ -79,7 +81,7 @@
                 </li>
                 <li class="item">
                     <a class="hor" href="">
-                    <img class="card-image" src="images/img3portfolio.jpg" alt="Фото приклад проєкт Prime" width="370"/>
+                    <img class="card-image" src="images/img3portfolio.jpg" alt="Фото приклад проєкт Prime" width="370" style="display:block"/>
                     <div class="card-content">
                         <h2 class="works-title">Проєкт Prime</h2>
                         <p class="works-text">Маркетинг</p>
@@ -88,7 +90,7 @@
                 </li>
                 <li class="item">
                     <a class="hor" href="">
-                    <img class="card-image" src="images/img4portfolio.jpg" alt="Фото приклад додатку Проєкт Boxes" width="370"/>
+                    <img class="card-image" src="images/img4portfolio.jpg" alt="Фото приклад додатку Проєкт Boxes" width="370" style="display:block"/>
                     <div class="card-content">
                         <h2 class="works-title">Проєкт Boxes</h2>
                         <p class="works-text">Додаток</p>
@@ -97,7 +99,7 @@
                 </li>
                 <li class="item">
                     <a class="hor" href="">
-                    <img class="card-image" src="images/img5portfolio.jpg" alt="Фото приклад Веб-сайт Inspiration has no Borders" width="370"/>
+                    <img class="card-image" src="images/img5portfolio.jpg" alt="Фото приклад Веб-сайт Inspiration has no Borders" width="370" style="display:block"/>
                     <div class="card-content">
                     <h2 class="works-title">Inspiration has no Borders</h2>
                     <p class="works-text">Веб-сайт</p>
@@ -106,7 +108,7 @@
                 </li>
                 <li class="item">
                     <a class="hor" href="">
-                    <img class="card-image" src="images/img6portfolio.jpg" alt="Фото приклад дизайну Видання Limited Edition" width="370"/>
+                    <img class="card-image" src="images/img6portfolio.jpg" alt="Фото приклад дизайну Видання Limited Edition" width="370" style="display:block"/>
                     <div class="card-content">
                     <h2 class="works-title">Видання Limited Edition</h2>
                     <p class="works-text">Дизайн</p>
@@ -115,7 +117,7 @@
                 </li>
                 <li class="item">
                     <a class="hor" href="">
-                    <img class="card-image" src="images/img7portfolio.jpg" alt="Фото приклад маркетингу Проєкт LAB" width="370"/>
+                    <img class="card-image" src="images/img7portfolio.jpg" alt="Фото приклад маркетингу Проєкт LAB" width="370" style="display:block"/>
                     <div class="card-content">
                     <h2 class="works-title">Проєкт LAB</h2>
                     <p class="works-text">Маркетинг</p>
@@ -124,7 +126,7 @@
                 </li>
                 <li class="item">
                     <a class="hor" href="">
-                    <img class="card-image" src="images/img8portfolio.jpg" alt="Фото приклад додатку Growing Business" width="370"/>
+                    <img class="card-image" src="images/img8portfolio.jpg" alt="Фото приклад додатку Growing Business" width="370" style="display:block"/>
                     <div class="card-content">
                     <h2 class="works-title">Growing Business</h2>
                     <p class="works-text">Додаток</p>
@@ -137,7 +139,7 @@
     </main>
     <footer class="contact-list">
     <div class="container">
-        <a href="./index.html" class="logo-link">Web<span class="logo-studio">Studio</span></a>
+        <a href="./index.html" class="logof-link">Web<span class="logo-studio">Studio</span></a>
         <address class="keys">
             <ul class="contact-foot list">
                 <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="map-link" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
