--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
             <nav class="main-nav">
                 <a class="logo-link" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
                 <ul class="site-nav list">
-                    <li class="item"><a href="./index.html" class="link current">Студія</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                    <li class="item"><a href="./index.html" class="link">Студія</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
                     <li class="item"><a href="#" class="link">Контакти</a></li>
                 </ul>
             </nav>      
